[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = {version="0.10.4", features=["sendmail-transport", "builder"]}
rocket_contrib = "0.4.11"
serde_json = "1.0.95"
serde_urlencoded = "0.7.1"
serde = "1.0.163"
serde_with = "3.0.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
